# build-commons-pipeline

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.husky/: pre-commit
agents/: analyst.py  context.md  db.py  enhance.py  hook_writer.py  llm.py  pipeline.py  script_writer.py  transcribe.py  trend_scraper.py
docs/: architecture.md  context.md  setup.md  spec.md
docs/decisions/: 0001-stack.md
docs/superpowers/plans/: 2026-06-10-build-commons-pipeline.md  2026-06-15-raw-video-enhancement.md
docs/superpowers/specs/: 2026-06-15-raw-video-enhancement-design.md
n8n/: context.md
n8n/workflows/: analytics.json  enhance.json  generate.json  publish.json
remotion/: .gitignore  context.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
remotion/render-server/src/: app.test.ts  app.ts  config.ts  index.ts  render.ts  supabase.ts
remotion/src/: Root.tsx
remotion/src/lib/: font.ts  (+9 more)
schemas/: context.md  enhancement.py  video_script.py
schemas/fixtures/: sample_assets.json  sample_enhancement_plan.json  sample_video_script.json
scripts/: done.py
supabase/: context.md
supabase/migrations/: 0001_init.sql  0002_enhancement.sql
tests/: test_analyst.py  test_enhance.py  test_enhancement_schema.py  test_fixture_contract.py  test_hook_writer.py  test_migration_0002.py  test_migrations.py  test_n8n_workflows.py  test_script_writer.py  test_transcribe.py  test_trend_scraper.py  test_video_script.py
(+14 files in other folders)
