[project]
name = "build-commons-pipeline"
version = "0.1.0"
description = "Semi-automated short-form video pipeline with closed analytics feedback loop"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.14,<2",
    "faster-whisper>=1.0",
    "pydantic>=2.8",
    "supabase>=2.6",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "sqlglot>=25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "schemas"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
